--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.7"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.5.2"
   }
 }
